objects/ssot__Opportunity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CloseDate__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClosedDate__c</fullName>
        <label>[DoNotUse]Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CommittedDate__c</fullName>
        <label>Committed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ContractId__c</fullName>
        <label>Contract</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyId__c</fullName>
        <label>Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>[DoNotUse]Currency</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomerAccountId__c</fullName>
        <label>CustomerAccount</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedCloseDate__c</fullName>
        <label>Estimated Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedRevenueAmount__c</fullName>
        <label>Expected Revenue Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinalizedDate__c</fullName>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Opportunity Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrivate__c</fullName>
        <label>Is Private</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LeadId__c</fullName>
        <label>Lead</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadSourceId__c</fullName>
        <label>Lead Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadSource__c</fullName>
        <label>[DoNotUse]Lead Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextStepText__c</fullName>
        <label>[DoNotUse]Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextStep__c</fullName>
        <label>Next Step</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityForecastCategoryId__c</fullName>
        <label>Opportunity Forecast Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityForecastCountgy__c</fullName>
        <label>[DoNotUse]Opportunity Forecast Category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityName__c</fullName>
        <label>Opportunity Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityStageId__c</fullName>
        <label>Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityStage__c</fullName>
        <label>[DoNotUse]Opportunity Stage</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityTypeId__c</fullName>
        <label>Opportunity Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Opportunity_LeadId_map_Lead_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity_LeadId_map_Lead_Id_N_1</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>Opportunity_LeadId_map_Lead_Id_N_1</relationshipLabel>
        <relationshipName>Opportunity_LeadId_map_Lead_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Opportunity_OwnerUserId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity_OwnerUserId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Opportunity_OwnerUserId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Opportunity_OwnerUserId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerUserId__c</fullName>
        <label>OwnerUser</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartnerAccountId__c</fullName>
        <label>Partner Account</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PhilanthropicGiftType__c</fullName>
        <label>Philanthropic Gift Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousOpportunityId__c</fullName>
        <label>Previous Opportunity</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceBookId__c</fullName>
        <label>Price Book</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOpportunityType__c</fullName>
        <label>Sales Opportunity Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductQuantityCount__c</fullName>
        <label>[DoNotUse]Total Product Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalProductQuantity__c</fullName>
        <label>Total Product Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WinProbabilityPercent__c</fullName>
        <label>Win Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761152170_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_Opportunity_CustomerA_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_Opportunity_CustomerA_rel</relationshipLabel>
        <relationshipName>rel_1697761152170_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761152243_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_Opportunity_PartnerAc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_Opportunity_PartnerAc_rel</relationshipLabel>
        <relationshipName>rel_1697761152243_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761173156_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementChannelType_Id_map_Opportu_rel</label>
        <referenceTo>ssot__EngagementChannelType__dlm</referenceTo>
        <relationshipLabel>EngagementChannelType_Id_map_Opportu_rel</relationshipLabel>
        <relationshipName>rel_1697761173156_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>